--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Services offered by Apex Science & Conservation Consultancy." />
   <title>Services | Apex Science & Conservation Consultancy</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.cleaned.css">
 </head>
 <body>
   <header>
@@ -21,110 +21,106 @@
     </nav>
   </header>
 
-  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-  <h1 style="font-size: 2rem; text-align: center;">
-  <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
-  Our Services
-    <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
-</h1>
-
-  <div style="padding-left: 15%; padding-right: 15%;">
-  <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with social research, 
-    and drawing on expertise in data, evidence, and programme design.</p>
-    <p>From understanding habitats to working with communities, 
-      we bring together diverse kinds of knowledge to tackle environmental challenges in a thoughtful and practical way.</p>
-</div>
-
-</div>
-</section>
-
-<section>
-  <div class="sidepicture-section">
-    <div class="sidepicture-text">
-      <h2>1. Ecological Services</h2>
-<p>We offer support with ecological research — be it field surveys or experimental studies — across both terrestrial and marine environments. 
-  We can work with you to find the most effective, evidence-based options for managing habitats in your particular setting.</p>
-<p>Our experience covers...</p>
-<ul>
-  <li><strong>Ecological studies</strong> — We can design and carry out surveys and experiments to help answer your ecological questions.
-  <li><strong>Habitat and land management</strong> – With particular expertise relating to road verges, public green spaces, farmland, and pollinator habitats.</li>
-  <li><strong>Marine conservation</strong> – With particular expertise relating to marine megafauna conservation, fisheries waste, and monitoring of plastic pollution.</li>
-</ul>
-      
+  <section class="container-lg text-center">
+    <h1 class="page-title">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-right: 0.5rem;">
+      Our Services
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-left: 0.5rem;">
+    </h1>
+    <div class="pad-15pct">
+      <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with social research,
+        and drawing on expertise in data, evidence, and programme design.</p>
+      <p>From understanding habitats to working with communities,
+        we bring together diverse kinds of knowledge to tackle environmental challenges in a thoughtful and practical way.</p>
     </div>
-    <img src="images/bee-turtle.jpg" alt="" class="sidepicture-image">
-  </div>
-</section>
+  </section>
 
   <section>
-  <div class="sidepicture-section reverse">
-    <div class="sidepicture-text">
-      <h2>2. Social Science Approaches</h2>
-      <p>By revealing people's attitudes, motivations and behaviours, we can help you to shape more effective and inclusive strategies — in nature conservation and beyond.</p>
-      <p>We have experience with a range of social science methods...</p>
-      <ul>
-        <li><strong>Questionnaire design</strong> — Including developing surveys <a href="https://doi.org/10.1002/pan3.70014" target="_blank" rel="noopener noreferrer">of 18,000 adults across England</a> with Natural England, 
-          and of public attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168" target="_blank" rel="noopener noreferrer">relating to pollinators</a>.</li>
-        <li><strong>Stakeholder interviews & focus groups</strong> — Including to guide the development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198" target="_blank" rel="noopener noreferrer">for hazel dormouse</a>.</li>
-        <li><strong>Analysis of digital data sources</strong> — Including integrating large-scale survey data with social media and other digital data sources to better understand <a href="https://doi.org/10.1002/pan3.10381" target="_blank" rel="noopener noreferrer">how people engage with nature</a>.</li>
-      </ul>
+    <div class="sidepicture-section">
+      <div class="sidepicture-text">
+        <h2>1. Ecological Services</h2>
+        <p>We offer support with ecological research — be it field surveys or experimental studies — across both terrestrial and marine environments.
+        We can work with you to find the most effective, evidence-based options for managing habitats in your particular setting.</p>
+        <p>Our experience covers...</p>
+        <ul>
+          <li><strong>Ecological studies</strong> — We can design and carry out surveys and experiments to help answer your ecological questions.</li>
+          <li><strong>Habitat and land management</strong> – With particular expertise relating to road verges, public green spaces, farmland, and pollinator habitats.</li>
+          <li><strong>Marine conservation</strong> – With particular expertise relating to marine megafauna conservation, fisheries waste, and monitoring of plastic pollution.</li>
+        </ul>
+      </div>
+      <img src="images/bee-turtle.jpg" alt="" class="sidepicture-image">
     </div>
-    <img src="images/fishing-africa.jpg" alt="" class="sidepicture-image">
-  </div>
-</section>
+  </section>
 
-<section>
-  <div class="sidepicture-section">
-    <div class="sidepicture-text">
-      <h2>3. Evidence Synthesis</h2>
-      <p>We are experienced in synthesising evidence to a rigorous scientific standard — from horizon scanning to systematic reviews — helping you to make informed decisions based on the best available knowledge.</p>
-      <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
-      <ul>
-        <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery" target="_blank" rel="noopener noreferrer">forests and oceans</a> (for The Woodland Trust).</li>
-        <li>Interactions between marine plastic pollution and <a href="https://doi.org/10.3354/esr00865" target="_blank" rel="noopener noreferrer"> turtles</a> / <a href="https://doi.org/10.1016/j.scitotenv.2023.162502" target="_blank" rel="noopener noreferrer">other megafauna</a>.
-        <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687" target="_blank" rel="noopener noreferrer">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556" target="_blank" rel="noopener noreferrer">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
-      </ul>
+  <section>
+    <div class="sidepicture-section reverse">
+      <div class="sidepicture-text">
+        <h2>2. Social Science Approaches</h2>
+        <p>By revealing people's attitudes, motivations and behaviours, we can help you to shape more effective and inclusive strategies — in nature conservation and beyond.</p>
+        <p>We have experience with a range of social science methods...</p>
+        <ul>
+          <li><strong>Questionnaire design</strong> — Including developing surveys <a href="https://doi.org/10.1002/pan3.70014" target="_blank" rel="noopener noreferrer">of 18,000 adults across England</a> with Natural England,
+            and of public attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168" target="_blank" rel="noopener noreferrer">relating to pollinators</a>.</li>
+          <li><strong>Stakeholder interviews & focus groups</strong> — Including to guide the development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198" target="_blank" rel="noopener noreferrer">for hazel dormouse</a>.</li>
+          <li><strong>Analysis of digital data sources</strong> — Including integrating large-scale survey data with social media and other digital data sources to better understand <a href="https://doi.org/10.1002/pan3.10381" target="_blank" rel="noopener noreferrer">how people engage with nature</a>.</li>
+        </ul>
+      </div>
+      <img src="images/fishing-africa.jpg" alt="" class="sidepicture-image">
     </div>
-    <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
-  </div>
-</section>
+  </section>
 
-<section>
-  <div class="sidepicture-section reverse">
-    <div class="sidepicture-text">
-      <h2>4. Data Services</h2>
-      <p>We can help you with managing, visualising and analysing ecological and social data — 
-        transforming complex datasets into meaningful insights that support effective decision-making.</p>
-      <p>Our expertise includes spatial mapping and analysis using Geographical Information Systems (GIS), and the handling of large or messy datasets.</p>
-      <p>Examples of our past experience include...</p>
-      <ul>
-        <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159" target="_blank" rel="noopener noreferrer">Remotely assessing road verge habitats</a> using Google Earth and Street View.</li>
-        <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589" target="_blank" rel="noopener noreferrer">Modelling road pollution</a> across Great Britain.</li>
-        <li>Comparing light pollution levels across UK local authorities and habitats.</li>
-      </ul>
+  <section>
+    <div class="sidepicture-section">
+      <div class="sidepicture-text">
+        <h2>3. Evidence Synthesis</h2>
+        <p>We are experienced in synthesising evidence to a rigorous scientific standard — from horizon scanning to systematic reviews — helping you to make informed decisions based on the best available knowledge.</p>
+        <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
+        <ul>
+          <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery" target="_blank" rel="noopener noreferrer">forests and oceans</a> (for The Woodland Trust).</li>
+          <li>Interactions between marine plastic pollution and <a href="https://doi.org/10.3354/esr00865" target="_blank" rel="noopener noreferrer"> turtles</a> / <a href="https://doi.org/10.1016/j.scitotenv.2023.162502" target="_blank" rel="noopener noreferrer">other megafauna</a>.</li>
+          <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687" target="_blank" rel="noopener noreferrer">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556" target="_blank" rel="noopener noreferrer">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li>
+        </ul>
+      </div>
+      <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
     </div>
-    <img src="images/data-services.jpg" alt="" class="sidepicture-image">
-  </div>
-</section>
+  </section>
 
-<section>
-  <div class="sidepicture-section">
-    <div class="sidepicture-text">
-      <h2>5. Programme development</h2>
-      <p>We can provide you with scientific support across all stages of grant writing and programme development — from shaping initial ideas to delivering robust, fundable proposals and implementing successful, well-managed projects.</p>
-      <p>Our experience includes...</p>
-      <ul>
-        <li><strong>Grant writing</strong> – With experience as both applicants and reviewers, we can help craft clear, compelling proposals that resonate with funders.</li>
-        <li><strong>Project management</strong> – Supporting the design, coordination and delivery of scientific research programmes and related activities, 
-          including assisting with monitoring, evaluation and learning (MEL), and reporting.</li>
-        <li><strong>Capacity building & community engagement</strong> – Including work focused on gender, equality and social inclusion in environmental initiatives.</li>
-      </ul>
+  <section>
+    <div class="sidepicture-section reverse">
+      <div class="sidepicture-text">
+        <h2>4. Data Services</h2>
+        <p>We can help you with managing, visualising and analysing ecological and social data —
+          transforming complex datasets into meaningful insights that support effective decision-making.</p>
+        <p>Our expertise includes spatial mapping and analysis using Geographical Information Systems (GIS), and the handling of large or messy datasets.</p>
+        <p>Examples of our past experience include...</p>
+        <ul>
+          <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159" target="_blank" rel="noopener noreferrer">Remotely assessing road verge habitats</a> using Google Earth and Street View.</li>
+          <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589" target="_blank" rel="noopener noreferrer">Modelling road pollution</a> across Great Britain.</li>
+          <li>Comparing light pollution levels across UK local authorities and habitats.</li>
+        </ul>
+      </div>
+      <img src="images/data-services.jpg" alt="" class="sidepicture-image">
     </div>
-    <img src="images/ocean-plastic.jpg" alt="" class="sidepicture-image">
-  </div>
-</section>
-  
-  <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
+  </section>
+
+  <section>
+    <div class="sidepicture-section">
+      <div class="sidepicture-text">
+        <h2>5. Programme development</h2>
+        <p>We can provide you with scientific support across all stages of grant writing and programme development — from shaping initial ideas to delivering robust, fundable proposals and implementing successful, well-managed projects.</p>
+        <p>Our experience includes...</p>
+        <ul>
+          <li><strong>Grant writing</strong> – With experience as both applicants and reviewers, we can help craft clear, compelling proposals that resonate with funders.</li>
+          <li><strong>Project management</strong> – Supporting the design, coordination and delivery of scientific research programmes and related activities,
+            including assisting with monitoring, evaluation and learning (MEL), and reporting.</li>
+          <li><strong>Capacity building & community engagement</strong> – Including work focused on gender, equality and social inclusion in environmental initiatives.</li>
+        </ul>
+      </div>
+      <img src="images/ocean-plastic.jpg" alt="" class="sidepicture-image">
+    </div>
+  </section>
+
+  <section class="container-md text-center">
     <h2>Need Something Else?</h2>
     <p>
       If what you need isn’t listed above, feel free to <a href="contact.html">get in touch</a>.
@@ -133,14 +129,14 @@
       We’ll be happy to discuss your requirements and help you find the right next steps.
     </p>
   </section>
-  
+
   <footer>
-  <p class="footer-contact">
-    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
-    <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
-    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
-  </p>
+    <p class="footer-contact">
+      <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
+      <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
+      <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
+    </p>
     <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
-</footer>
+  </footer>
 </body>
 </html>
