--- a/testimonials.html
+++ b/testimonials.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Testimonials for Apex Science & Conservation Consultancy." />
   <title>Testimonials | Apex Science & Conservation Consultancy</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.cleaned.css">
 </head>
 <body>
   <header>
@@ -21,33 +21,27 @@
     </nav>
   </header>
 
-  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-    <h1 style="font-size: 2rem; text-align: center;">
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  <section class="container-lg text-center">
+    <h1 class="page-title">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-right: 0.5rem;">
       Testimonials
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-left: 0.5rem;">
     </h1>
-    <div>
-      <p>Here are a few reflections from partners we've worked with — their words offer a sense of what it's like to collaborate with us.</p>
-    </div>
+    <p>Here are a few reflections from partners we've worked with — their words offer a sense of what it's like to collaborate with us.</p>
   </section>
 
   <section>
-  <div class="sidepicture-section">
-    <div class="sidepicture-text">
-      <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
+    <p><em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em></p>
     <p><strong>Sam Manning, The Woodland Trust</strong></p>
 
-    <p>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
-    <p><strong>PERSON 2, ORGANISATION 2</strong></p>
+    <p style="text-align:right;"><em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
+    <p style="text-align:right;"><strong>PERSON 2, ORGANISATION 2</strong></p>
 
-    <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
+    <p><em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
     <p><strong>PERSON 3, ORGANISATION 3</strong></p>
-      
-    </div>
+
     <img src="images/footprints.jpg" alt="Footprints on path" class="section-image">
-  </div>
-</section>
+  </section>
 
   <footer>
     <p class="footer-contact">
