--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="About Apex Science & Conservation Consultancy — Bridging ecology, people & practice." />
   <title>Apex Science & Conservation Consultancy</title>
-
   <script>
     if (window.location.hostname === "www.apex-science.com") {
       window.location.replace("https://apex-science.com" + window.location.pathname + window.location.search + window.location.hash);
     }
   </script>
-
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.cleaned.css">
 </head>
 <body>
   <header>
@@ -28,14 +26,13 @@
     </nav>
   </header>
 
-  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-    <h1 style="font-size: 2rem; text-align: center;">
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  <section class="container-lg text-center">
+    <h1 class="page-title">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-right: 0.5rem;">
       About Us
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-left: 0.5rem;">
     </h1>
-
-    <div style="padding-left: 15%; padding-right: 15%;">
+    <div class="pad-15pct">
       <p>
         At <strong>Apex Science & Conservation</strong>, we provide scientific support and
         deliver nature conservation research that is both <strong>rigorous</strong> and
@@ -62,8 +59,7 @@
       </div>
       <img src="images/verge-emily-earth.jpg" alt="Our Work Areas" class="sidepicture-image">
     </div>
-
-    <p style="text-align: center; margin-top: 1.5rem;">
+    <p class="text-center" style="margin-top: 1.5rem;">
       For further details on how we can support you and your organisation, see our
       <a href="services.html"><b>Services</b></a> page.
     </p>
@@ -71,7 +67,6 @@
 
   <section>
     <h2>Who we are...</h2>
-
     <div class="profiles" style="margin-top: 2rem;">
       <div class="profile-card">
         <img src="images/photo-ben.jpg" alt="Dr Ben Phillips">
