--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       window.location.replace("https://apex-science.com" + window.location.pathname + window.location.search + window.location.hash);
     }
   </script>
-  <link rel="stylesheet" href="styles.cleaned.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
