--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Publications for Apex Science & Conservation Consultancy." />
   <title>Publications | Apex Science & Conservation Consultancy</title>
-  <link rel="stylesheet" href="styles.cleaned.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
