--- a/testimonials.html
+++ b/testimonials.html
@@ -30,7 +30,8 @@
     <p>Here are a few reflections from partners we've worked with — their words offer a sense of what it's like to collaborate with us.</p>
   </section>
 
-  <section>
+  <section class="sidepicture-section">
+  <div class="sidepicture-text">
     <p><em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em></p>
     <p><strong>Sam Manning, The Woodland Trust</strong></p>
 
@@ -39,9 +40,10 @@
 
     <p><em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
     <p><strong>PERSON 3, ORGANISATION 3</strong></p>
+  </div>
 
-    <img src="images/footprints.jpg" alt="Footprints on path" class="section-image">
-  </section>
+  <img src="images/footprints.jpg" alt="Footprints on path" class="sidepicture-image">
+</section>
 
   <footer>
     <p class="footer-contact">
