--- a/testimonials.html
+++ b/testimonials.html
@@ -30,7 +30,7 @@
     <p>Here are a few reflections from partners we've worked with — their words offer a sense of what it's like to collaborate with us.</p>
   </section>
 
-  <section class="sidepicture-section">
+  <section class="sidepicture-section testimonials-section">
   <div class="sidepicture-text">
     <p style="margin-bottom: 1.5rem;"><em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em></p>
     <p style="margin-bottom: 2rem;"><strong>Sam Manning, The Woodland Trust</strong></p>
@@ -41,6 +41,9 @@
     <p style="margin-bottom: 1.5rem;"><em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
     <p><strong>PERSON 3, ORGANISATION 3</strong></p>
   </div>
+
+  <img src="images/footprints.jpg" alt="Footprints on path" class="sidepicture-image">
+</section>
 
   <img src="images/footprints.jpg" alt="Footprints on path" class="sidepicture-image">
 </section>
