--- a/testimonials.html
+++ b/testimonials.html
@@ -32,13 +32,13 @@
 
   <section class="sidepicture-section testimonials-section">
   <div class="sidepicture-text">
-    <p style="margin-bottom: 1.5rem;"><em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em></p>
+    <p><em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em></p>
     <p style="margin-bottom: 2rem;"><strong>Sam Manning, The Woodland Trust</strong></p>
 
-    <p style="text-align:right; margin-bottom: 1.5rem;"><em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
+    <p style="text-align:right"><em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
     <p style="text-align:right; margin-bottom: 2rem;"><strong>PERSON 2, ORGANISATION 2</strong></p>
 
-    <p style="margin-bottom: 1.5rem;"><em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
+    <p><em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
     <p><strong>PERSON 3, ORGANISATION 3</strong></p>
   </div>
 
