--- a/services.html
+++ b/services.html
@@ -106,7 +106,7 @@
   <section>
     <div class="sidepicture-section">
       <div class="sidepicture-text">
-        <h2>5. Programme development</h2>
+        <h2>5. Programme Development</h2>
         <p>We can provide you with scientific support across all stages of grant writing and programme development — from shaping initial ideas to delivering robust, fundable proposals and implementing successful, well-managed projects.</p>
         <p>Our experience includes...</p>
         <ul>
