--- a/testimonials.html
+++ b/testimonials.html
@@ -42,7 +42,7 @@
     <p><strong>PERSON 3, ORGANISATION 3</strong></p>
   </div>
 
-  <img src="images/footprints.jpg" alt="Footprints on path" class="sidepicture-image">
+  <img src="images/footprints.jpg" alt="Footprints on path" class="sidepicture-image testimonials-image">
 </section>
 
   <footer>
