--- a/testimonials.html
+++ b/testimonials.html
@@ -31,19 +31,19 @@
   </section>
 
   <section class="sidepicture-section testimonials-section">
-  <div class="sidepicture-text">
-    <p><em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em></p>
-    <p style="margin-bottom: 2rem;"><strong>Sam Manning, The Woodland Trust</strong></p>
+    <div class="sidepicture-text">
+      <p><em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em></p>
+      <p style="margin-bottom: 2rem;"><strong>Sam Manning, The Woodland Trust</strong></p>
 
-    <p><em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
-    <p style="margin-bottom: 2rem;"><strong>PERSON 2, ORGANISATION 2</strong></p>
+      <p style="text-align:right;"><em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
+      <p style="text-align:right; margin-bottom: 2rem;"><strong>PERSON 2, ORGANISATION 2</strong></p>
 
-    <p><em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
-    <p><strong>PERSON 3, ORGANISATION 3</strong></p>
-  </div>
+      <p><em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
+      <p><strong>PERSON 3, ORGANISATION 3</strong></p>
+    </div>
 
-  <img src="images/footprints.jpg" alt="Footprints on path" class="sidepicture-image testimonials-image">
-</section>
+    <img src="images/footprints.jpg" alt="Footprints on path" class="testimonials-image">
+  </section>
 
   <footer>
     <p class="footer-contact">
