--- a/testimonials.html
+++ b/testimonials.html
@@ -34,7 +34,7 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <p style="margin-top: 2rem"><em>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</em></p>
-      <p style="margin-bottom: 2rem"><strong>Sam Manning, The Woodland Trust</strong></p>
+      <p style="margin-bottom: 2rem"><strong>PERSON 1, ORGANISATION 1</strong></p>
 
       <p><em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
       <p style="margin-bottom: 2rem;"><strong>PERSON 2, ORGANISATION 2</strong></p>
