--- a/testimonials.html
+++ b/testimonials.html
@@ -35,7 +35,7 @@
     <div class="sidepicture-text">
       <p style="margin-top: 2rem"><em>"Emily's attention to detail and strong research skills have helped to deliver 
         complex research programmes on time and to budget, backed by calm manner and excellent people skills."</em></p>
-      <p style="margin-bottom: 2rem"><strong>Alasdair Davies: Director, Arribada Initiative</strong></p>
+      <p style="margin-bottom: 2rem"><strong>Alasdair Davies — Director, Arribada Initiative</strong></p>
 
       <p><em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
       <p style="margin-bottom: 2rem;"><strong>PERSON 2, ORGANISATION 2</strong></p>
