--- a/testimonials.html
+++ b/testimonials.html
@@ -37,8 +37,9 @@
         complex research programmes on time and to budget, backed by calm manner and excellent people skills."</em></p>
       <p style="margin-bottom: 2rem"><strong>Alasdair Davies — Director, Arribada Initiative</strong></p>
 
-      <p><em>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
-      <p style="margin-bottom: 2rem;"><strong>PERSON 2, ORGANISATION 2</strong></p>
+      <p><em>"TESTIMONIAL 2. Ben produced a ground-breaking bibliography for us which has helped unlock a whole new conversation in the scientific and public spheres, 
+        his open-minded and innovative vision, subject knowledge and scientific rigor made him the perfect consultant to deliver this for us."</em></p>
+      <p style="margin-bottom: 2rem;"><strong>Sam Manning — Project Officer, The Woodland Trust</strong></p>
 
       <p><em>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</em></p>
       <p><strong>PERSON 3, ORGANISATION 3</strong></p>
