--- a/publications.html
+++ b/publications.html
@@ -62,25 +62,28 @@
       <h2>Pollinator Conservation</h2>
       <ul style="padding: 0; margin-top: 1.5rem;">
         <li style="margin-bottom: 1rem;">
-          Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats — a synthesis. <i>Ecology Letters</i>.
+          Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats — a synthesis. 
+          <i>Ecology Letters</i>, 28: e70189. 
+          <a href="https://doi.org/10.1111/ele.70189" target="_blank" rel="noopener noreferrer">View publication</a>
         </li>
         <li style="margin-bottom: 1rem;">
           Knapp JL & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation.
-          <i>People and Nature</i>, 3: 204-220.
+          <i>People and Nature</i>, 3: 204-220. 
           <a href="https://doi.org/10.1002/pan3.10168" target="_blank" rel="noopener noreferrer">View publication</a>
         </li>
         <li style="margin-bottom: 1rem;">
-          Shaw, <b>Phillips BB</b>, et al. (2020). Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition.
-          <i>Landscape Ecology</i>, 35: 513-527.
+          Shaw RF, <b>Phillips BB</b>, et al. (2020). Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition.
+          <i>Landscape Ecology</i>, 35: 513-527. 
           <a href="https://doi.org/10.1007/s10980-019-00962-0" target="_blank" rel="noopener noreferrer">View publication</a>
         </li>
         <li style="margin-bottom: 1rem;">
-          <b>Phillips BB</b> et al. (2018). Drought reduces floral resources for pollinators. <i>Global Change Biology</i>, 24: 3226-3235.
+          <b>Phillips BB</b> et al. (2018). Drought reduces floral resources for pollinators. 
+          <i>Global Change Biology</i>, 24: 3226-3235. 
           <a href="https://doi.org/10.1111/gcb.14130" target="_blank" rel="noopener noreferrer">View publication</a>
         </li>
         <li style="margin-bottom: 1rem;">
           <b>Phillips BB</b> et al. (2018). Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.).
-          <i>Basic and Applied Ecology</i>, 32: 66-76.
+          <i>Basic and Applied Ecology</i>, 32: 66-76. 
           <a href="https://doi.org/10.1016/j.baae.2018.06.004" target="_blank" rel="noopener noreferrer">View publication</a>
         </li>
       </ul>
@@ -176,7 +179,7 @@
           <a href="https://doi.org/10.1002/2688-8319.12198" target="_blank" rel="noopener noreferrer">View publication</a>
         </li>
         <li style="margin-bottom: 1rem;">
-          Knapp & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation.
+          Knapp JL & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation.
           <i>People and Nature</i>, 3: 204-220.
           <a href="https://doi.org/10.1002/pan3.10168" target="_blank" rel="noopener noreferrer">View publication</a>
         </li>
