--- a/publications.html
+++ b/publications.html
@@ -62,6 +62,10 @@
       <h2>Pollinator Conservation</h2>
       <ul style="padding: 0; margin-top: 1.5rem;">
         <li style="margin-bottom: 1rem;">
+          Bishop, ..., <b>Phillips BB</b>, ..., et al. (2025). Critical habitat thresholds for effective pollinator conservation in agricultural landscapes. 
+          <i>Science</i>.
+        </li>
+        <li style="margin-bottom: 1rem;">
           Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats — a synthesis. 
           <i>Ecology Letters</i>, 28: e70189. 
           <a href="https://doi.org/10.1111/ele.70189" target="_blank" rel="noopener noreferrer">View publication</a>
