--- a/publications.html
+++ b/publications.html
@@ -142,6 +142,11 @@
           <a href="https://doi.org/10.1016/j.marenvres.2023.106181" target="_blank" rel="noopener noreferrer">View publication</a>
         </li>
         <li style="margin-bottom: 1rem;">
+          Omeyer LCM & <b>Duncan EM</b> et al. (2023). Interactions between marine megafauna and plastic pollution in Southeast Asia. 
+          <i>Science of The Total Environment</i>, 874: 162502. 
+          <a href="https://doi.org/10.1016/j.scitotenv.2023.162502" target="_blank" rel="noopener noreferrer">View publication</a>
+        </li>
+        <li style="margin-bottom: 1rem;">
           <b>Duncan EM</b> et al. (2021). Plastic pollution and small juvenile marine turtles: a potential evolutionary trap.
           <i>Frontiers in Marine Science</i>, 8: 699521.
           <a href="https://doi.org/10.3389/fmars.2021.699521" target="_blank" rel="noopener noreferrer">View publication</a>
