--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.
+    &copy; 2025 Apex Science & Conservation LLP. All rights reserved.
   </footer>
 </body>
 </html>
