--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Contact Apex Science & Conservation Consultancy." />
-  <title>Contact | Apex Science & Conservation Consultancy</title>
+  <meta name="description" content="Contact Apex Science & Conservation" />
+  <title>Contact | Apex Science & Conservation</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
