--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Consultancy Logo">
+      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Logo">
     </a>
     <nav>
       <a href="index.html">About</a>
@@ -33,7 +33,7 @@
 
     <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 3rem; align-items: center;">
       <div>
-        <a href="mailto:bphillips.consultancy@gmail.com" style="text-decoration: none; color: inherit;" aria-label="Email us">
+        <a href="mailto:info@apex-science.co.uk" style="text-decoration: none; color: inherit;" aria-label="Email us">
           <img src="images/email.png" alt="Email us" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
           <p style="margin: 0; font-weight: 500;">info@apex-science.co.uk</p>
         </a>
