--- a/publications.html
+++ b/publications.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Publications for Apex Science & Conservation Consultancy." />
-  <title>Publications | Apex Science & Conservation Consultancy</title>
+  <meta name="description" content="Publications for Apex Science & Conservation." />
+  <title>Publications | Apex Science & Conservation</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Consultancy Logo">
+      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Logo">
     </a>
     <nav>
       <a href="index.html">About</a>
@@ -202,7 +202,7 @@
       <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
       <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
     </p>
-    <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
+    <p>&copy; 2025 Apex Science & Conservation LLP. All rights reserved.</p>
   </footer>
 </body>
 </html>
