--- a/publications.html
+++ b/publications.html
@@ -202,7 +202,7 @@
       <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
       <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
     </p>
-    <p>&copy; 2025 Apex Science & Conservation LLP. All rights reserved.</p>
+    <p>&copy; 2025 Apex Science and Conservation LLP. All rights reserved.</p>
   </footer>
 </body>
 </html>
