--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Contact Apex Science & Conservation" />
-  <title>Contact | Apex Science & Conservation</title>
+  <title>Contact | Apex Science and Conservation</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -51,7 +51,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Apex Science & Conservation LLP. All rights reserved.
+    &copy; 2025 Apex Science and Conservation LLP. All rights reserved.
   </footer>
 </body>
 </html>
