--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="About Apex Science & Conservation — Bridging ecology, people & practice." />
-  <title>Apex Science & Conservation</title>
+  <title>Apex Science and Conservation</title>
   <script>
     if (window.location.hostname === "www.apex-science.com") {
       window.location.replace("https://apex-science.com" + window.location.pathname + window.location.search + window.location.hash);
@@ -94,7 +94,7 @@
       <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
       <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
     </p>
-    <p>&copy; 2025 Apex Science & Conservation LLP. All rights reserved.</p>
+    <p>&copy; 2025 Apex Science and Conservation LLP. All rights reserved.</p>
   </footer>
 </body>
 </html>
