--- a/publications.html
+++ b/publications.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Publications for Apex Science & Conservation." />
-  <title>Publications | Apex Science & Conservation</title>
+  <meta name="description" content="Publications for Apex Science and Conservation." />
+  <title>Publications | Apex Science and Conservation</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Logo">
+      <img src="images/logo-apex-white.png" alt="Apex Science and Conservation Logo">
     </a>
     <nav>
       <a href="index.html">About</a>
@@ -96,7 +96,7 @@
 
   <section>
     <div class="publications-box">
-      <h2>Roads & Road Verges</h2>
+      <h2>Roads and Road Verges</h2>
       <ul style="padding: 0; margin-top: 1.5rem;">
         <li style="margin-bottom: 1rem;">
           <b>Phillips BB</b> et al. (2021). Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589.
