--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Contact Apex Science & Conservation" />
-  <title>Contact | Apex Science and Conservation</title>
+  <title>Contact | Apex Science & Conservation</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Logo">
+      <img src="images/logo-apex-white.png" alt="Apex logo">
     </a>
     <nav>
       <a href="index.html">About</a>
@@ -23,9 +23,9 @@
 
   <section class="container-md text-center">
     <h1 class="page-title">
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-right: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-right: 0.5rem;">
       Contact Us
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-left: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-left: 0.5rem;">
     </h1>
     <p style="max-width: 600px; margin: 0.5rem auto 1.5rem;">
       Whether you have a project in mind, or simply want to learn more about how we can support your work, we'd love to hear from you.
