--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="About Apex Science & Conservation — Bridging ecology, people & practice." />
-  <title>Apex Science and Conservation</title>
+  <title>Apex Science & Conservation</title>
   <script>
     if (window.location.hostname === "www.apex-science.com") {
       window.location.replace("https://apex-science.com" + window.location.pathname + window.location.search + window.location.hash);
@@ -15,7 +15,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Logo">
+      <img src="images/logo-apex-white.png" alt="Apex logo">
     </a>
     <nav>
       <a href="index.html">About</a>
@@ -28,9 +28,9 @@
 
   <section class="container-lg text-center">
     <h1 class="page-title">
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-right: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-right: 0.5rem;">
       About Us
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-left: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-left: 0.5rem;">
     </h1>
       <p>
         At <strong>Apex Science & Conservation</strong>, we provide scientific support and
