--- a/publications.html
+++ b/publications.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Publications for Apex Science and Conservation." />
-  <title>Publications | Apex Science and Conservation</title>
+  <meta name="description" content="Publications for Apex Science & Conservation." />
+  <title>Publications | Apex Science & Conservation</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex-white.png" alt="Apex Science and Conservation Logo">
+      <img src="images/logo-apex-white.png" alt="Apex logo">
     </a>
     <nav>
       <a href="index.html">About</a>
@@ -23,9 +23,9 @@
 
   <section class="container-lg text-center">
     <h1 class="page-title">
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-right: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-right: 0.5rem;">
       Publications
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-left: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-left: 0.5rem;">
     </h1>
       <p>In collaboration with many colleagues and partner organisations, we’ve published over 50 academic papers — cited more than 3,000 times —
         alongside reports for a wide range of audiences.</p>
