--- a/services.html
+++ b/services.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Services offered by Apex Science & Conservation Consultancy." />
+  <meta name="description" content="Services offered by Apex Science & Conservation." />
   <title>Services | Apex Science & Conservation Consultancy</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <a href="index.html">
-      <img src="images/logo-apex-white.png" alt="Apex Science & Conservation Consultancy Logo">
+      <img src="images/logo-apex-white.png" alt="Apex logo">
     </a>
     <nav>
       <a href="index.html">About</a>
@@ -23,9 +23,9 @@
 
   <section class="container-lg text-center">
     <h1 class="page-title">
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-right: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-right: 0.5rem;">
       Our Services
-      <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; margin-left: 0.5rem;">
+      <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-left: 0.5rem;">
     </h1>
       <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with social research,
         and drawing on expertise in data, evidence, and programme design.</p>
@@ -134,7 +134,7 @@
       <a href="mailto:info@apex-science.co.uk" class="footer-icon email" aria-label="Email us"></a>
       <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
     </p>
-    <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
+    <p>&copy; 2025 Apex Science and Conservation LLP. All rights reserved.</p>
   </footer>
 </body>
 </html>
