--- a/publications.html
+++ b/publications.html
@@ -96,7 +96,7 @@
 
   <section>
     <div class="publications-box">
-      <h2>Roads and Road Verges</h2>
+      <h2>Roads & Road Verges</h2>
       <ul style="padding: 0; margin-top: 1.5rem;">
         <li style="margin-bottom: 1rem;">
           <b>Phillips BB</b> et al. (2021). Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589.
@@ -167,7 +167,7 @@
 
   <section>
     <div class="publications-box">
-      <h2>Understanding people's attitudes and behaviours</h2>
+      <h2>Understanding people's attitudes & behaviours</h2>
       <ul style="padding: 0; margin-top: 1.5rem;">
         <li style="margin-bottom: 1rem;">
           <b>Duncan EM</b>, <b>Phillips BB</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea:
