--- a/testimonials.html
+++ b/testimonials.html
@@ -41,6 +41,11 @@
         his open-minded and innovative vision, subject knowledge and scientific rigor made him the perfect consultant to deliver this for us."</em></p>
       <p style="margin-bottom: 2rem;"><strong>Sam Manning — Project Officer, The Woodland Trust</strong></p>
 
+      <p><em>"Working with Emily on Príncipe Island was an outstanding experience. From the very first day, she was deeply engaged with our team, 
+        overcoming language barriers with ease and connecting with the local community in an exemplary way. Her dedication, generosity, and ability to share 
+        knowledge made our organization stronger. I cannot recommend Emily highly enough."</em></p>
+      <p style="margin-bottom: 2rem;"><strong>Estrela Matilde — Executive Director, Fundação Príncipe</strong></p>
+
     </div>
 
     <img src="images/footprints.jpg" alt="Footprints on path" class="testimonials-image">
