--- a/testimonials.html
+++ b/testimonials.html
@@ -33,18 +33,18 @@
   <section>
   <div class="sidepicture-section">
     <div class="sidepicture-text">
-      <p style="margin-top: 2rem"><em>"Emily's attention to detail and strong research skills have helped to deliver 
+      <p style="margin-top: 1.5rem"><em>"Emily's attention to detail and strong research skills have helped to deliver 
         complex research programmes on time and to budget, backed by calm manner and excellent people skills."</em></p>
-      <p style="margin-bottom: 2rem"><strong>Alasdair Davies — Director, Arribada Initiative</strong></p>
+      <p style="margin-bottom: 1.5rem"><strong>Alasdair Davies — Director, Arribada Initiative</strong></p>
 
       <p><em>"Ben produced a ground-breaking bibliography for us which has helped unlock a whole new conversation in the scientific and public spheres, 
         his open-minded and innovative vision, subject knowledge and scientific rigor made him the perfect consultant to deliver this for us."</em></p>
-      <p style="margin-bottom: 2rem;"><strong>Sam Manning — Project Officer, The Woodland Trust</strong></p>
+      <p style="margin-bottom: 1.5rem;"><strong>Sam Manning — Project Officer, The Woodland Trust</strong></p>
 
       <p><em>"Working with Emily on Príncipe Island was an outstanding experience. From the very first day, she was deeply engaged with our team, 
         overcoming language barriers with ease and connecting with the local community in an exemplary way. Her dedication, generosity, and ability to share 
-        knowledge made our organization stronger. I cannot recommend Emily highly enough."</em></p>
-      <p style="margin-bottom: 2rem;"><strong>Estrela Matilde — Executive Director, Fundação Príncipe</strong></p>
+        knowledge made our organisation stronger. I cannot recommend Emily highly enough."</em></p>
+      <p style="margin-bottom: 1.5rem;"><strong>Estrela Matilde — Executive Director, Fundação Príncipe</strong></p>
 
     </div>
 
